crates/shell/src/parser/program/tests/snapshots/omp_shell_engine__parser__program__tests__extended_test__parse_extended_test_parenthesized.snap
---
source: brush-parser/src/parser/tests/extended_test.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ ( -f file ) ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              ExtendedTest(ExtendedTestExprCommand(
                expr: Parenthesized(UnaryTest(FileExistsAndIsRegularFile, Word(
                  value: "file",
                  loc: "[location]",
                ))),
                loc: "[location]",
              ), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
